--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "dompurify": "^2.0.12",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.1.0",
