--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-router-hash-link": "^2.0.0",
+    "react-scripts": "^3.4.3",
     "react-truncate": "^2.4.0",
     "styled-components": "^5.1.1"
   },
