--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-query": "^2.23.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "^3.4.3",
