--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
     "react-scripts": "^3.4.3",
-    "react-truncate": "^2.4.0",
+    "react-text-truncate": "^0.16.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
