--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "dompurify": "^2.0.12",
     "moment": "^2.27.0",
+    "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^16.13.1",
